# program_test

./: .gitignore  README.md  run-colmap-tanks.sh  run-colmap.sh  run-mve.sh  run-openmvs.sh  run-smvs.sh
bashfiles/: README.md  backup.sh  forsmvs_81204.sh  hello_world.sh  listdir.sh  rename.sh  smvs.sh  smvs_81204.sh
bashfiles/commandline/playground/: foo.html  log_20181114.txt  log_20181117.txt  log_20181118.txt  ls-output.txt
bashfiles/commandline/playground/dir1/: fun-hard
commandline/playground/: bashtest.sh  lazydog.txt
cpptest/osfile/: CMakeLists.txt  osfile.cc
datastructure/: README.md  da_list.cpp  dirent_note.md  test.cpp
hello/: CMakeLists.txt  Makefile  hello.cc  nullptr.md  printtest.cc  printtest.h  vector3.cc  vector3.h
hello/libs/: CMakeLists.txt  searchtest.cc  searchtest.h
latex_test/: codeseg.tex  imgtable.tex
opencv_test/: CMakeLists.txt  disimg.cc
opencv_test/disimg/: Readme.txt  backsub.sh  disimg.cc
opencv_test/match/: CMakeLists.txt  match.cc
opencv_test/myslic/: CMakeLists.txt  slic.cc  slic.h  slic_test.cc
opencv_test/nicp_depth_image_registration/: CMakeLists.txt  nicp_depth_image_registration.cpp
pytorchtest/: data.txt  first.py  hello.py  pytest.py  rrforest.py
travel-sites/: Readme.md  calc.py  hello.cpp
